--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "2"
-
 services:
   # Noted that 'privileged: true' in your VPN config is needed for docker-ap to manipulate AP
   nordvpn:
@@ -32,7 +30,13 @@ services:
       - INTERFACE=wlan0
       - OUTGOINGS=nordlynx
       - CHANNEL=36
-      - WPA_PASSPHRASE=<wifi_password>   # Required
-      - SSID=<ssid>                      # Required      
+      - WPA_PASSPHRASE=<wifi_password>            # Required
+      - SSID=<ssid>                               # Required
       - DNS_ADDRESSES=103.86.96.100,103.86.99.100 # NordVPN DNSs
-      - COUNTRY_CODE=<wifi_country_code> # Required, e.g. GB
+      - COUNTRY_CODE=<wifi_country_code>          # Required, e.g. GB
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep -f '/usr/sbin/hostapd' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
